feat: Resolve transitive dependencies
